swen430as1/tests/valid/dowhile/DoWhile_Valid_5.while
int f(int[] items) {
  int i = 0;
  int r = 0;
  do {
      i = i + 1;
      if(i == 1) { continue; }      
      r = r + 1;
  } while(i < |items|);

  return r;
}

void main() {
    assert f([1]) == 0;
    assert f([1,2,3]) == 2;
    assert f([-1]) == 0;
}
